# CaptureKarma

./: CaptureKarma.spec  LICENSE  README.md  main.py  marketing_screen_capture.py  pyproject.toml  requirements.txt
CaptureKarma/: __init__.py
CaptureKarma/capture/: recording.py  region.py  screenshot.py
CaptureKarma/ui/: __init__.py  about_tab.py  capture_tab.py  main_window.py  settings_tab.py
CaptureKarma/utils/: image_processing.py  scrolling.py
resources/: app_icon.icns
